--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "chai-backend",
+  "name": "youtube-backend",
   "version": "1.0.0",
-  "description": "a backend at chai aur code channel - youtube",
   "type": "module",
   "main": "index.js",
   "scripts": {
@@ -10,9 +9,10 @@
   "keywords": [
     "javascript",
     "backend",
-    "chai"
+    "nodejs",
+    "express"
   ],
-  "author": "Hitesh Choudhary",
+  "author": "Divyansh Kashyap",
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^3.0.1",
